<resources>
    <string name="app_name">M12_camping</string>

    <string name="hint_nombre">Escribe un nombre ...</string>
    <string name="hint_maxOcupantes">Maximos ocupantes ...</string>
    <string name="hint_precioXpersona">Precio por persona ...</string>
    <string name="hint_descripcion">Escribe una descripcion ...</string>

    <string name="hint_nombreCliente">Nombre del cliente ...</string>
    <string name="hint_telefono">Numero de telefono ...</string>
    <string name="hint_fechaEntrada">dd-MM-yyyy</string>
    <string name="hint_fechaSalida">dd-MM-yyyy</string>
    <string name="hint_precioTotal">Precio total</string>

    <string name="hint_numero_ocupantes">Introduce el numero de ocupantes ...</string>

    <string name="button_save">Save</string>

    <string name="duplicate_name_error">Parcela no guardada porque existe otra con el mismo nombre.</string>
    <string name="empty_not_saved_nombre">Parcela no guardada porque no hay nombre.</string>
    <string name="empty_not_saved_ocupantes">Parcela no guardada porque no hay ocupantes.</string>
    <string name="empty_not_saved_precio">Parcela no guardada porque no hay precio.</string>

    <string name="empty_not_saved_nombreCliente">Reserva no guardada porque no hay nombre de cliente.</string>
    <string name="empty_not_saved_telefono">Reserva no guardada porque no hay telefono.</string>
    <string name="empty_not_saved_fechaEntrada">Reserva no guardada porque no hay fecha de entrada.</string>
    <string name="empty_not_saved_fechaSalida">Reserva no guardada porque no hay fecha de salida.</string>
    <string name="empty_not_saved_parcelas">Reserva no guardada porque no hay parcelas asignadas.</string>

    <string name="invalid_precio">Precio invalido.</string>
    <string name="invalid_max_ocupantes">Numero de ocupantes invalido.</string>
    <string name="invalid_date_format">Fecha invalida, formato necesario dd-MM-yyyy.</string>
    <string name="invalid_date_logic">La fecha de salida debe ser posterior a la fecha de entrada.</string>
    <string name="invalid_phone_number">El número de móvil debe contener entre 9 y 15 dígitos.</string>

    <string name="parcela_saved_successfully">Parcela guardada con éxito.</string>
    <string name="reserva_saved_successfully">Reserva guardada con éxito.</string>

    <string name="add_parcela">Añadir Parcela</string>
    <string name="delete_parcela">Borrar Parcela</string>
    <string name="edit_parcela">Editar Parcela</string>

    <string name="add_reserva">Añadir Reserva</string>
    <string name="delete_reserva">Borrar Reserva</string>
    <string name="edit_reserva">Editar Reserva</string>
    <string name="send_reserva">Enviar Reserva</string>

    <string name="cambiar_a_reservas">Listado Reservas</string>
    <string name="cambiar_a_parcelas">Listado Parcelas</string>

    <string name="ordenar_por_nombre">Ordenar por nombre</string>
    <string name="ordenar_por_maxocupantes">Ordenar por ocupantes</string>
    <string name="ordenar_por_precioxpersona">Ordenar por precio</string>

    <string name="ordenar_por_nombreCliente">Ordenar por nombre</string>
    <string name="ordenar_por_telefono">Ordenar por telefono</string>
    <string name="ordenar_por_fechaEntrada">Ordenar por fecha ent.</string>

    <string name="nombre">Nombre</string>
    <string name="maxOcupantes">MaxOcupantes</string>
    <string name="precioXpersona">PrecioXpersona</string>
    <string name="descripcion">Descripcion</string>

    <string name="nombreCliente">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="FechaEntrada">Fecha entrada</string>
    <string name="FechaSalida">Fecha salida</string>
    <string name="precioTotal">Precio total</string>

    <string name="parcela">Parcela</string>
    <string name="ocupantes">Ocupantes</string>
    <string name="ParcelasReservadas">PARCELAS RESERVADAS</string>

    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="seleccionara_parcela">Seleccionar parcela</string>

    <string name="parcela_nombre">Nombre de parcela</string>
    <string name="numero_ocupantes">Numero de ocupantes</string>
    <string name="edit_button">Editar</string>
    <string name="delete_button">Eliminar</string>

    <string name="edit_ocupantes">Editar el numero de ocupantes</string>

    <string name="delete_all">Eliminar todas las reservas</string>
    <string name="all_reservas_deleted">Todas las reservas han sido eliminadas</string>

    <string name="no_parcelas_reservadas">No hay parcelas reservadas</string>
    <string name="no_parcelas_disponibles">No hay parcelas disponibles</string>

    <string name="cancel">Cancelar</string>
    <string name="save_reserva_first">Por favor, guarda la reserva antes de añadir parcelas.</string>
    <string name="invalid_data">Dato invalido.</string>

    <string name="no_available_parcelas">No hay parcelas disponibles para las fechas seleccionadas.</string>
    <string name="invalid_date_current">La fecha de entrada y salida debe ser igual o posterior a la fecha actual.</string>
    <string name="invalid_date_incorrect">El día o el mes son inválidos.</string>
    <string name="empty_not_saved_descripcion">Parcela no guardada porque no hay descripcion.</string>
    <string name="run_tests">Run Tests</string>
    <string name="run_test_volumen">Test Volumen</string>ç
    <string name="run_test_sobrecarga">Test Sobrecarga</string>


</resources>