<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_parcela_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/parcela"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_numero_ocupantes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ocupantes"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_edit_parcela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar" />

    <Button
        android:id="@+id/button_delete_parcela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar" />
</LinearLayout>
