<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/small_padding">

    <TextView
        android:id="@+id/reserva_nombre_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreCliente"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reserva_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FechaEntrada"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/reserva_precio_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precioTotal"
        android:textSize="14sp" />

    <!-- Contenedor para las parcelas reservadas -->
    <LinearLayout
        android:id="@+id/parcelas_reservadas_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/small_padding">

        <TextView
            android:id="@+id/label_parcelas_reservadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ParcelasReservadas"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="14sp" />

        <!-- Este RecyclerView mostrará las parcelas reservadas -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_parcelas_reservadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
